--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ a {
 }
 
 .fs5 {
-    font-size: 12px;
+    font-size: 12p;
 }
 
 .fs6{
@@ -229,17 +229,16 @@ a:hover {
     margin: 5px auto;
 }
 
-.about-wrapper {
-    max-width: 620px;
-    height: auto;
-    margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 75px;
-}
-
 .main-wrapper {
     max-width: 960px;
     margin: auto;
+}
+
+.about-wrapper {
+    max-width: 720px;
+    height: auto;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 .mobile-content-container {
@@ -298,6 +297,27 @@ a:hover {
 .hide-checkbox {
     display: none;
     visibility: hidden;
+}
+
+.day-1-menu {
+    background-image: url(images/day1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:400px;
+}
+
+.day-2-menu {
+    background-image: url(images/day2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:400px;
+}
+
+.day-3-menu {
+    background-image: url(images/day3.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height:400px;
 }
 
 .arrow-placement {
@@ -376,9 +396,13 @@ a:hover {
 
 .content-container {
     margin: 30px 0;
-    height: 255px;
+    height: 290px;
     margin-right: auto;
     margin-left: auto;
+    width: 800px;
+}
+.box{
+    margin-top: 10px;
 }
 .mobile-content-container {
     margin-right: auto;
@@ -389,6 +413,11 @@ a:hover {
 .arrow{
     display: inline-block;
     padding-left: 110px;
+
+}
+.arrow2{
+    display: inline-block;
+    padding-left: 200px;
 }
 .roominfo{
     padding-top: 10px;
@@ -396,92 +425,16 @@ a:hover {
 .content-image {
     width: auto;
     height: 255px;
+    float: left;
+
 }
 
-#about-graphic {
-    
-    background-image: url(images/about-element.png);
-    height:500px;
-    width:100%;
-    background-position:top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    
+.bodytext {
+    margin-left: 280px;
 }
-
-
-
-#register-graphic {
-    
-    background-image: url(images/register-graphic.png);
-    height:1000px;
-    width:100%;
-    background-position:top;
-    background-size: cover;
-    background-repeat: no-repeat;
-    
-    
-}
-
-
-#register-info-block {
-    
-    letter-spacing: 5px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    line-height: 40px;
-    
-}
-
-
-.register-click-box {
-    
-    
-    border-style: solid;
-    border-width:2px;
-    border-color: black;
-    height:260px;
-    width:400px;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
-
-
-.register-click-box2 {
-    
-    
-    margin-top: 50px;
-    border-style: solid;
-    border-width:2px;
-    border-color: black;
-    height:290px;
-    width:400px;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
-.register-click-box:hover {
-    
-    background-color: rgba(255,255,255,0.2);
-    
-}
-
-
-
-.register-click-box2:hover {
-    
-    background-color: rgba(255,255,255,0.2);
-    
-}
-
-#member-price {
-    
-     padding-top: 10px;
-    padding-bottom: 50px;
-    
+.bodytext2{
+    margin-left: 280px;
+    width: 230px;
 }
 
 /* START PARALLAX SCROLL */
@@ -491,6 +444,7 @@ a:hover {
 }
 
 #content {
+    height:1100px;
     margin-right:auto;
     margin-left:auto;
 }
@@ -560,36 +514,18 @@ a:hover {
     height:55px;
     width:500px;
     background-repeat: no-repeat;
-    background-color:cadetblue;
     background-position: center;
+    border: 2px;
     border-color: rgba(0,0,0,0.3);
     border-style: solid;
     
 }
 
-.third-section-about {
-    margin-top: 50px;
-    margin-bottom: 70px;
-    margin-left: auto;
-    margin-right:auto;
-    height:55px;
-    width:450px;
-    background-repeat: no-repeat;
-    background-color:cadetblue;
-    background-position: center;
-    border-color: rgba(0,0,0,0.3);
-    border-style: solid;
-}
-
 
 .third-section:hover {
-    background-color:orange;
+    background-color:mediumseagreen;
 }
 
-
-.third-section-about:hover {
-    background-color:orange;  
-}
 
 #register-now {
     font-family: AnchorJack;
@@ -616,7 +552,6 @@ a:hover {
 
 .statement {
     font-family:"futura-pt-condensed", sans-serif;
-    font-weight: 800;
     font-size:19px;
     font-kerning: 200px;
     line-height: 200%;
@@ -681,111 +616,31 @@ p {
 /* .........END PARALLAX SCROLL............ */
 
 
-.menu-container {
-    width: 100%;
-    text-align: center;
-    overflow: hidden;
-    height: 400px;
-}
-
-
-.day-1-menu-mobile {
-    display: none;
-    background-image: url(images/day1.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    position: relative;
-    left: 100%;
-    margin-left: -200%;
-}
-
-.day-1-menu {
-    background-image: url(images/day1.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-
-    position: relative;
-    left: 100%;
-    margin-left: -200%;
-}
-
-.day-2-menu {
-    background-image: url(images/day2.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:400px;
-}
-
-.day-3-menu {
-    background-image: url(images/day3.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    height:400px;
-}
-
-
-.bg-img-container {
-    width: 100%;
-    text-align: center;
-    overflow: hidden;
-    height: 1334px;
-}
-
-.bg-img-4k {
-    max-width: 4000px;
-    position: relative;
-    left: 100%;
-    margin-left: -200%;
-}
-
-.bg-img-2k {
-    display: none;
-}
-
-.bg-img-1600 {
-    display:none;
-}
-
-.bg-img-1200 {
-    display: none;
-}
-
 /* .........START MEDIA QUERIES............ */
 @media only screen and (max-width: 959px) {
     .top-nav {
         display: none;
     }
-
+    
     .top-nav-bg-mobile {
         display: block;
     }
-
+    
     .top-nav-mobile {
         display: block;
     }
-
+    
     .header-nav {
         display: block;
     }
+}
 
+@media only screen and (max-width: 959px) {
     .content-container {
         display: none;
     }
-
+    
     .mobile-content-container {
         display: block;
-    }
-
-    .day-1-menu {
-        display: none;
-    }
-
-    .day-1-menu-mobile {
-        display: inline-block;
-    }
-
-    .menu-container {
-        height: 200px;
     }
 }
