--- a/styles.css
+++ b/styles.css
@@ -448,25 +448,40 @@ a:hover {
 }
 
 #travel-graphic {
-    
     background-image: url(images/travel-graphic.png);
     height:300px;
     width:100%;
     background-position:top;
     background-size: cover;
     background-repeat: no-repeat;
-    
 }
 
-#maps-graphic {
-    
-    background-image: url(images/maps-graphic.png);
+#transit {
+    background-image: url(images/transit.png);
     height:300px;
     width:100%;
     background-position:top;
     background-size: cover;
     background-repeat: no-repeat;
-    
+}
+
+
+#parking {
+    background-image: url(images/parking.png);
+    height:300px;
+    width:100%;
+    background-position:top;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#maps-graphic {
+    background-image: url(images/maps-graphic.png);
+    height:300px;
+    width:100%;
+    background-position:top;
+    background-size: cover;
+    background-repeat: no-repeat;    
 }
 
 
