--- a/styles.css
+++ b/styles.css
@@ -234,17 +234,23 @@ a:hover {
     margin: auto;
 }
 
+.mobile-wrapper {
+    width: 300px;
+    margin: 0 auto;
+}
+
 .about-wrapper {
     max-width: 720px;
     height: auto;
     margin: 0 auto;
     padding: 20px;
+    width: 530px;
 }
 
 .mobile-content-container {
     display: none;
     margin: 10px auto;
-    width: 400px;
+    width: 300px;
 }
 
 .margin-25 {
@@ -356,7 +362,7 @@ a:hover {
 }
 
 .schedule-container {
-    max-width: 200px;
+    max-width: 300px;
     margin: 0 auto 30px auto;
 }
 
@@ -374,6 +380,7 @@ a:hover {
     background-color: rgba(255,255,255,0.8);
     width: 100%;
     height: 80px;
+    clear: both;
 }
 
 .footer p {
@@ -401,32 +408,67 @@ a:hover {
     margin-left: auto;
     width: 800px;
 }
-
-.box{
-    margin-top: 10px;
+.content-container-mobile{
+    margin: auto;
+    height: 290px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 800px;
+}
+.park{
+    height: 290px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 450px;
+    float: left;
+    max-width: 80%;
+}
+.extrainfo{
+    margin-left:30px;
+}
+.titles{
+    margin-top: 15px;
+}
+.map{
+    width: auto;
+    height:290px;
 }
 
 .mobile-content-container {
     margin-right: auto;
     margin-left: auto;
-    width: 600px;
-    height: 300px;
+    width: 330px;
+    height: 110px;
+}
+.mobile-content-container2 {
+    margin-right: auto;
+    margin-left: auto;
+    width: 330px;
+}
+.margin-10 {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 .arrow {
     display: inline-block;
-    padding-left: 110px;
+    padding-left: 10px;
 
 }
 .arrow2 {
     display: inline-block;
     padding-left: 200px;
 }
-.roominfo {
-    padding-top: 10px;
-}
+
 .content-image {
     width: auto;
     height: 255px;
+    float: left;
+}
+
+.mobile-content-image {
+    height: 100px;
+    margin-right: 20px;
+    width: auto;
     float: left;
 }
 
@@ -650,7 +692,9 @@ a:hover {
 }
 
 .third-section-about:hover {
-    background-color:orange;  
+    background-color:orange; 
+    width: 400px;
+    text-align: center;
 }
 
 
@@ -665,6 +709,7 @@ a:hover {
     font-size: 35px;
     text-align: center;
 }
+
  
 .fourth-section {
     margin-left: auto;
