--- a/styles.css
+++ b/styles.css
@@ -906,8 +906,7 @@ p {
         background-size: cover;
         background-repeat: no-repeat;
     }
-
-
+    
     #parking {
         background-image: url(images/960-parking.png);
         height:200px;
@@ -916,6 +915,16 @@ p {
         background-size: cover;
         background-repeat: no-repeat;
     }
+    
+    #maps-graphic {
+        background-image: url(images/maps-graphic.png);
+        height: 200px;
+        width: auto;
+        background-position: top;
+        background-size: cover;
+        background-repeat: no-repeat;    
+    }
+    
 }
 
 @media only screen and (max-width: 799px) {
